accessible/tests/browser/events/browser_test_scrolling.js
@@ -10,7 +10,11 @@ addAccessibleTask(
     <div style="height: 100vh" id="two">two</div>
     <div style="height: 100vh; width: 200vw; overflow: auto;" id="three">
       <div style="height: 300%;">three</div>
-    </div>`,
+    </div>
+    <textarea id="textarea" rows="1">a
+b
+c</textarea>
+  `,
   async function(browser, accDoc) {
     let onScrolling = waitForEvents([
       [EVENT_SCROLLING, accDoc],
@@ -92,5 +96,18 @@ addAccessibleTask(
       scrollEndEvent4.maxScrollY >= scrollEndEvent4.scrollY,
       "scrollY is within max"
     );
+
+    // textarea scrolling
+    info("Moving textarea caret to c");
+    onScrolling = waitForEvents([
+      [EVENT_SCROLLING, "textarea"],
+      [EVENT_SCROLLING_END, "textarea"],
+    ]);
+    await invokeContentTask(browser, [], () => {
+      const textareaDom = content.document.getElementById("textarea");
+      textareaDom.focus();
+      textareaDom.selectionStart = 4;
+    });
+    await onScrolling;
   }
 );
